ver. 1.3: the checkbox alignment and overlays in the portfolio are fixed

--- a/css/main.css
+++ b/css/main.css
@@ -677,14 +677,21 @@ svg {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 12px;
   line-height: 1.17;
+  text-align: center;
   color: rgb(117, 117, 117);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .user-meta__checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .user-meta__checkbox-icons-container {
@@ -1547,20 +1554,21 @@ svg {
 }
 
 .project-card__img {
-  margin: 0 auto;
   width: 100%;
+  margin: 0 auto;
 }
 
 .project-card__overlay {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 63px 24px;
-  font-size: 18px;
-  line-height: 1.56;
   position: absolute;
   overflow: hidden;
   top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding-left: 24px;
+  padding-right: 24px;
   color: rgb(255, 255, 255);
   background-color: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(101%);
@@ -1573,6 +1581,37 @@ svg {
 .project-card__link:hover .project-card__overlay, .project-card__link:focus .project-card__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+@media screen and (max-width: 767px) {
+  .project-card__overlay {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .project-card__overlay {
+    padding-top: 49px;
+    padding-bottom: 77px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .project-card__overlay {
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
+}
+
+.project-card__overlay-text {
+  display: block;
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.56;
+}
+@media screen and (max-width: 360px) {
+  .project-card__overlay-text {
+    font-size: 16px;
+  }
 }
 
 .project-card__meta {
