--- a/sass/components/_modal__checkbox.scss
+++ b/sass/components/_modal__checkbox.scss
@@ -1,3 +1,9 @@
+// .user-meta__checkbox-container {
+//     display: flex;
+//     justify-content: center;
+//     width: 100%;
+// }
+
 .user-meta__checkbox {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -9,14 +15,20 @@
 .user-meta__checkbox-label {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 
     font-size: 12px;
     line-height: 1.17;
+    text-align: center;
   
     color: $main-font-color;
   
     transition: fill $main-transition-delay $main-transition-timing-function;
+
+    @media screen and (min-width: $desktop-w) {
+        font-size: 14px;
+        line-height: 1.71;
+    }
 }
 
 .user-meta__checkbox-icons-container {
